<resources>
    <string name="app_name">GBV</string>
    <string name="learn">Learning Material</string>
    <string name="video">Videos</string>
    <string name="doc">Documents</string>
    <string name="camp">Campaigns</string>
    <string name="law">Laws &amp; Policies</string>
    <string name="Register">Register</string>
    <string name="eme">emergency call</string>
    <string name="join">Would you like to join the community?</string>
    <string name="Log">Log in</string>
    <string name="Password">Password</string>
    <string name="help">Get help</string>
    <string name="Username">Username</string>
    <string name="speak">Speak with people who can help you over come the fear of GBV</string>
    <string name="connect">Speak now</string>
    <string name="main">Awareness, capacity building and psychological support</string>
    <string name="intro">GBV</string>
    <string name="forget">Forgot Password?</string>
    <string name="cert">Awareness</string>
    <string name="material">Get some material, instructions and tools you need to provide community to GBV survivors</string>
    <string name="Knowledge">Knowledge Hub</string>
    <string name="GBV">Conversation</string>
    <string name="con">Join conversation that increase prevention GBV</string>
    <string name="jon">Join</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="numbers">Numbers for emergency messages </string>
    <string name="Num">Numbers for emergency call</string>
    <string name="me">Enter Your First number</string>
    <string name="ma">Enter Your Second Number</string>
    <string name="back">back to login</string>
    <string name="reset">reset</string>
    <string name="email">enter your email</string>
    <string name="Phone">ENTER PHONE NO.</string>
    <string name="Message">ENTER YOUR MESSAGE</string>
    <string name="GO">SEND!</string>
    <string name="welcome">Welcome,</string>
    <string name="user">user</string>
    <string name="name">Name</string>
    <string name="email2">Email</string>
    <string name="login">Already have account? Login</string>
    <string name="register">Not yet registered? Sign Up</string>
</resources>