<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="30dp">


            <!--TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-170dp"
                android:text="@string/Login"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp" /!-->

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/gn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/intro"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="26dp"
                android:text="@string/main"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic" />


            <EditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="26dp"
                android:backgroundTint="#48EAC9"
                android:ems="10"
                android:hint="@string/Username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColorHint="#198365" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="26dp"
                android:backgroundTint="#48EAC9"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="#198365" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="26dp"
                android:backgroundTint="#F40226"
                android:text="@string/Log"
                android:textColor="#FAF7F7" />

            <TextView
                android:id="@+id/join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="26dp"
                android:text="@string/join"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="26dp"
                android:text="@string/Register"
                android:textColor="@color/black"
                android:textSize="40sp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>