<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Forget">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/gn" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="#48EAC9"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColorHint="#198365" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/reset"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/back"
        android:textColor="@color/white" />



</LinearLayout>