<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"
    android:padding="15sp"
    android:background="@color/forgot"
    tools:context=".Chat">


    <ImageView
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#E4A9A9"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="30dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="26dp"
                android:background="@drawable/gn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/Phone"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="15sp"
                android:textColorHint="#0A0B0B"
                android:maxLength="10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/Message"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="15sp"
                android:lines="5"
                android:textColorHint="#0A0B0B"/>

            <Button
                android:id="@+id/btnSent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="26dp"
                android:backgroundTint="#3F51B5"
                android:text="@string/GO"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
